--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "ai16z-website",
   "version": "1.0.0",
-  "type": "module"
-} 
+  "type": "module",
+  "dependencies": {
+    "express": "^4.21.1"
+  }
+}
